--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
