hosting issue resolved

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
-# Suppress npm deprecation warnings
-# The --production flag warning is harmless and comes from Railway's build process
-loglevel=warn
+cache=false
+prefer-offline=false
+fund=false
+audit=false
