--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "node start-server.js",
-    "postbuild": "next-sitemap"
+    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
