--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for BizBranches",
   "main": "index.ts",
 "scripts": {
-  "build": "tsc",
+  "build": "node ./node_modules/typescript/bin/tsc",
   "start": "node dist/index.js",
   "dev": "npx ts-node-dev --respawn index.ts",
   "test": "echo \"Error: no test specified\" && exit 1"
