Build backend from root using root's TypeScript

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.install]
 cmds = [
   "npm install",
-  "npm install --prefix frontend",
-  "npm install --prefix backend"
+  "cd frontend && npm install",
+  "cd backend && npm install"
 ]
 
 [phases.build]
