--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,5 @@
 [phases.install]
-cmds = [
-  "npm install",
-  "cd frontend && npm install",
-  "cd backend && npm install"
-]
+cmds = ["npm run install:all"]
 
 [phases.build]
 cmds = ["npm run build"]
