Fix 502: robust start.sh, LF line endings, standalone path fallbacks

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "HOSTNAME=0.0.0.0 node .next/standalone/server.js",
-    "postbuild": "cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/ && next-sitemap"
+    "postbuild": "mkdir -p .next/standalone/.next && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/ && if [ -d .next/standalone/bizbranches ]; then cp -r public .next/standalone/bizbranches/ && mkdir -p .next/standalone/bizbranches/.next && cp -r .next/static .next/standalone/bizbranches/.next/; fi && next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
