--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,11 @@ CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# Optional: Leopard/Courier API (for Pakistan cities)
-# LEOPARDS_API_BASE_URL=
-# LEOPARDS_API_KEY=
-# LEOPARDS_API_USERNAME=
-# LEOPARDS_API_PASSWORD=
+# Optional: Leopard Courier API (Pakistan cities / shipping)
+# Get credentials from Leopards Courier merchant portal.
+LEOPARDS_API_BASE_URL=https://merchantapi.leopardscourier.com/api
+LEOPARDS_API_KEY=your_leopards_api_key
+LEOPARDS_API_PASSWORD=your_leopards_api_password
 
 # Optional: Admin secret for status updates
 ADMIN_SECRET=your_admin_secret
