Auto-approve listings, email confirmation, admin submissions API, fix duplicate-check result variable

--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,21 @@ LEOPARDS_API_BASE_URL=https://merchantapi.leopardscourier.com/api
 LEOPARDS_API_KEY=your_leopards_api_key
 LEOPARDS_API_PASSWORD=your_leopards_api_password
 
-# Optional: Admin secret for status updates
+# Optional: Admin secret for status updates and admin API
 ADMIN_SECRET=your_admin_secret
+
+# Email (confirmation after auto-approval) - use your SMTP credentials
+# Do not commit real passwords; set in Railway/server env only.
+SMTP_HOST=mail.example.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=support@example.com
+SMTP_PASS=your_email_password
+EMAIL_FROM=support@example.com
+EMAIL_FROM_NAME=BizBranches Support
+EMAIL_REPLY_TO=
+SUPPORT_EMAIL=support@example.com
+SITE_URL=https://bizbranches.pk
 
 # ---- FRONTEND (frontend/.env.local) ----
 # Backend API URL - used for server-side fetches and rewrites
