--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.16",
     "@types/node": "^22",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
